@@ -1,6 +1,10 @@
 package ke.blood.blood_backend.service;
 
-import ke.blood.blood_backend.model.*;
+import ke.blood.blood_backend.model.BloodRequest;
+import ke.blood.blood_backend.model.MatchRecord;
+import ke.blood.blood_backend.model.MatchStatus;
+import ke.blood.blood_backend.model.RequestStatus;
+import ke.blood.blood_backend.model.User;
 import ke.blood.blood_backend.repository.BloodRequestRepository;
 import ke.blood.blood_backend.repository.MatchRecordRepository;
 import ke.blood.blood_backend.repository.UserRepository;
@@ -11,7 +15,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -24,24 +28,40 @@ public class MatchingService {
     private final AuditService auditService;
 
     /**
-     * Simplified first‑come, first‑serve match:
-     *  - Pick the AVAILABLE donor with matching bloodType who registered earliest.
+     * ABO + Rh compatibility map.
      */
+    private static final Map<String, List<String>> COMPATIBILITY = Map.of(
+            "O-", List.of("O-"),
+            "O+", List.of("O-", "O+"),
+            "A-", List.of("O-", "A-"),
+            "A+", List.of("O-", "O+", "A-", "A+"),
+            "B-", List.of("O-", "B-"),
+            "B+", List.of("O-", "O+", "B-", "B+"),
+            "AB-", List.of("O-", "A-", "B-", "AB-"),
+            "AB+", List.of("O-", "O+", "A-", "A+", "B-", "B+", "AB-", "AB+")
+    );
+
     @Transactional
     public void matchRequest(BloodRequest request) {
-        // only match pending
+        // Only match pending requests
         if (request.getStatus() != RequestStatus.PENDING) {
             return;
         }
 
-        // fetch, filter, then sort by createdAt asc
+        // Determine compatible donor blood types
+        List<String> compatibleTypes = COMPATIBILITY
+                .getOrDefault(request.getBloodType(), List.of());
+
+        // Fetch, filter, then sort by createdAt (nulls filtered out)
         List<User> donors = userRepository.findAll().stream()
                 .filter(u -> Boolean.TRUE.equals(u.getAvailable()))
                 .filter(u -> u.getBloodType() != null
-                        && u.getBloodType().equalsIgnoreCase(request.getBloodType()))
+                        && compatibleTypes.contains(u.getBloodType()))
                 .filter(u -> !u.getId().equals(request.getRequester().getId()))
+                // Exclude any user without a createdAt timestamp
+                .filter(u -> u.getCreatedAt() != null)
                 .sorted(Comparator.comparing(User::getCreatedAt))
-                .collect(Collectors.toList());
+                .toList();
 
         if (donors.isEmpty()) {
             auditService.logEvent(
@@ -52,16 +72,16 @@ public class MatchingService {
             return;
         }
 
-        // pick the first (earliest-registered) donor
+        // Pick the earliest-registered donor
         User chosenDonor = donors.get(0);
 
-        // update request
+        // Update the request
         request.setMatchedDonor(chosenDonor);
         request.setStatus(RequestStatus.MATCHED);
         request.setMatchedAt(Instant.now());
         bloodRequestRepository.save(request);
 
-        // record match
+        // Create the match record
         MatchRecord record = MatchRecord.builder()
                 .bloodRequest(request)
                 .donor(chosenDonor)
@@ -70,15 +90,27 @@ public class MatchingService {
                 .build();
         record = matchRecordRepository.save(record);
 
-        // send email
-        emailService.sendMatchNotification(chosenDonor, request);
+        // Attempt email notification (DB is already updated)
+        try {
+            emailService.sendMatchNotification(chosenDonor, request);
+            record.setNotificationSent(true);
+            record.setNotificationSentAt(Instant.now());
+            matchRecordRepository.save(record);
 
-        // update notification flag
-        record.setNotificationSent(true);
-        record.setNotificationSentAt(Instant.now());
-        matchRecordRepository.save(record);
+            // Now mark donor unavailable
+            chosenDonor.setAvailable(false);
+            userRepository.save(chosenDonor);
 
-        // audit
+        } catch (Exception ex) {
+            // Log but do not roll back the DB changes
+            auditService.logEvent(
+                    "MATCH_EMAIL_FAILED",
+                    "Failed to notify donor " + chosenDonor.getUsername(),
+                    request.getRequester()
+            );
+        }
+
+        // Final audit of success
         auditService.logEvent(
                 "MATCH_SUCCESS",
                 "Request ID " + request.getId() + " matched to donor " + chosenDonor.getUsername(),
